# eQueue_backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  up-linux.sh
app/: build.py  main.py
app/alembic/versions/: 2025_04_15_2222-7a9227c8a8a2_created_entities.py  2025_04_16_0039-743758f8b617_created_entities.py  2025_04_16_0053-f98d2324451e_created_entities.py  2025_04_18_1916-222c9248cc16_renamed_users_token_users_access_token.py  2025_04_18_2116-221012bc3cd5_added_groups_seeder.py  2025_04_23_0335-cb9c143ec269_removed_semester_from_workspaces_table.py  2025_04_23_2029-9c63893fff56_added_ondelete_behaviour.py
app/api/: __init__.py  groups.py  queue_members.py  queue_websocket.py  queues.py  subjects.py  submissions.py  tasks.py  users.py  workspace_members.py  workspaces.py
app/core/: __init__.py  config.py
app/core/exceptions/: __init__.py  business_logic_exceptions.py  moodle_exceptions.py  orm.py  orm_exceptions.py  register_exceptions_handlers.py  websocket_exceptions.py
app/core/middlewares/: __init__.py  register_middlewares.py
app/core/models/: __init__.py  base.py  db_setup.py  entities.py
app/core/schemas/: __init__.py  groups.py  queue_members.py  (+7 more)
app/crud/: __init__.py  groups.py  queue_members.py  queues.py  subjects.py  submissions.py  tasks.py  users.py  workspace_members.py  workspaces.py
app/docs/: __init__.py  docs_from_json.py  errors_schemas.py  swagger_docs.json
app/moodle/: __init__.py
app/scripts/: update_groups.py
app/templates/: ws_test_client.html
app/utils/: __init__.py  semester_calculator.py
(+13 files in other folders)
